# LearnGStreamer

./: .gitignore  CMakeLists.txt  basic-tutorial-3-exercise.c
